# QBDI

./: .appveyor.yml  .clang-format  .clang-format.exclude-list.txt  .cmake_format.conf.py  .gitignore  .readthedocs.condaenv.yml  .readthedocs.yml  .travis.yml  CHANGELOG  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README-pypi.rst  README.rst  format.sh  pyproject.toml  setup.cfg  setup.py
examples/: CMakeLists.txt  Dockerfile  cryptolock.c  cryptolock.cpp  fibonacci.c  fibonacci.cpp  fibonacci_customrules.cpp  fibonacci_customrules_asm.cpp  fibonacci_customrules_asm.s  mnemonicFilter.cpp  modules.c  modules.cpp  thedude.c  thedude.cpp
examples/c/: CMakeLists.txt  fibonacci.c  tracer_preload.c
examples/cpp/: CMakeLists.txt  fibonacci.cpp  tracer_preload.cpp
examples/pyqbdi/: coverage.py  trace_inst.py  trace_preload.py  trace_sin.py
templates/qbdi_preload_template/: CMakeLists.txt  CMakeLists.txt.in  README.txt  qbdi_preload_template.c
templates/qbdi_template/: CMakeLists.txt  CMakeLists.txt.in  README.txt  qbdi_template.c
test/: CMakeLists.txt  QBDIBenchmark.cpp  QBDITest.cpp
test/API/: APITest.cpp  APITest.h  AllocTest.cpp  CMakeLists.txt  InstAnalysisTest.h  InstAnalysisTest_X86.cpp  InstAnalysisTest_X86_64.cpp  MemoryAccessTest.cpp  MemoryAccessTest.h  MemoryAccessTest_X86.cpp  MemoryAccessTest_X86_64.cpp  OptionsTest.h  OptionsTest_X86.cpp  OptionsTest_X86_64.cpp  RangeTest.cpp  VMTest.cpp  VMTest.h
test/API/AARCH64/: CMakeLists.txt  InstAnalysisTest_AARCH64.cpp  MemoryAccessTest_AARCH64.cpp  VMTest_AARCH64.cpp  VMTest_AARCH64.h  VMTest_AARCH64_LDRL.cpp  VMTest_AARCH64_LocalMonitor.cpp  VMTest_AARCH64_X28.cpp
test/API/ARM/: CMakeLists.txt  InstAnalysisTest_ARM.cpp  InstAnalysisTest_Thumb.cpp  MemoryAccessTest_ARM.cpp  MemoryAccessTest_ARM_LDM_STM.cpp  MemoryAccessTest_Thumb.cpp  MemoryAccessTest_Thumb_LDM_STM.cpp  VMTest_ARM.cpp  VMTest_ARM.h
test/API/X86/: CMakeLists.txt  InstAnalysisTest_X86.cpp  MemoryAccessTest_X86.cpp  OptionsTest_X86.cpp  VMTest_X86.cpp  VMTest_X86.h
test/API/X86_64/: CMakeLists.txt  InstAnalysisTest_X86_64.cpp  MemoryAccessTest_X86_64.cpp  OptionsTest_X86_64.cpp  VMTest_X86_64.cpp  VMTest_X86_64.h
test/Benchmark/: CMakeLists.txt  Fibonacci.cpp  SHA256.cpp
test/ExecBlock/: CMakeLists.txt  ExecBlockManagerTest.cpp  ExecBlockManagerTest.h  ExecBlockTest.cpp  ExecBlockTest.h  PatchEmpty.h
test/ExecBlock/AARCH64/: CMakeLists.txt  PatchEmptyAARCH64.cpp
test/ExecBlock/ARM/: CMakeLists.txt  PatchEmptyARM.cpp
test/ExecBlock/X86/: CMakeLists.txt  PatchEmptyX86.cpp
test/ExecBlock/X86_64/: CMakeLists.txt  PatchEmptyX86_64.cpp
test/Miscs/: CMakeLists.txt  StringTest.cpp
test/Patch/: CMakeLists.txt  ComparedExecutor_ARM.cpp  ComparedExecutor_ARM.h  ComparedExecutor_X86.cpp  ComparedExecutor_X86.h  ComparedExecutor_X86_64.cpp  ComparedExecutor_X86_64.h  Instr_ARMTest.cpp  Instr_ARMTest.h  Instr_Test.cpp  Instr_Test.h  Instr_X86_64Test.cpp  Instr_X86_64Test.h  MemoryAccessTable.h  MemoryAccessTable_X86_64.cpp  MemoryAccessTable_X86_64.h  Patch_ARMTest.cpp  Patch_ARMTest.h  Patch_Test.cpp  Patch_Test.h  Patch_X86_64Test.cpp  Patch_X86_64Test.h  Utils.cpp  Utils.h  WIN64_RunRealExec.asm  WIN86_RunRealExec.asm
test/Patch/AARCH64/: CMakeLists.txt  ComparedExecutor_AARCH64.cpp  ComparedExecutor_AARCH64.h  LLVMOperandInfo_AARCH64.cpp  MemoryAccessTable_AARCH64.cpp
test/Patch/ARM/: CMakeLists.txt  ComparedExecutor_ARM.cpp  ComparedExecutor_ARM.h  ComparedExecutor_Thumb.cpp  ComparedExecutor_Thumb.h  Instr_Test_ARM.cpp  Instr_Test_Thumb.cpp  Instr_Test_Thumb.h  LLVMOperandInfo_ARM.cpp  MemoryAccessTable_ARM.cpp  Patch_Test_ARM.cpp  Patch_Test_Thumb.cpp  Patch_Test_Thumb.h
test/Patch/X86/: CMakeLists.txt  ComparedExecutor_X86.cpp  ComparedExecutor_X86.h  Instr_Test_X86.cpp  MemoryAccessTable_X86.cpp  Patch_Test_X86.cpp  WIN86_RunRealExec.asm
test/Patch/X86_64/: CMakeLists.txt  ComparedExecutor_X86_64.cpp  ComparedExecutor_X86_64.h  Instr_Test_X86_64.cpp  LLVMOperandInfo_X86_64.cpp  MemoryAccessTable_X86_64.cpp  Patch_Test_X86_64.cpp  WIN64_RunRealExec.asm
test/TestSetup/: CMakeLists.txt  InMemoryAssembler.cpp  InMemoryAssembler.h  LLVMTestEnv.cpp  LLVMTestEnv.h  ShellcodeTester.cpp  ShellcodeTester.h
test/TestSetup/AARCH64/: CMakeLists.txt  InMemoryAssembler_AARCH64.cpp
test/TestSetup/ARM/: CMakeLists.txt  InMemoryAssembler_ARM.cpp
test/TestSetup/X86/: CMakeLists.txt  InMemoryAssembler_X86.cpp
test/TestSetup/X86_64/: CMakeLists.txt  InMemoryAssembler_X86_64.cpp
tools/: CMakeLists.txt  frida-qbdi.js
tools/QBDIPreload/: CMakeLists.txt
tools/QBDIPreload/include/: QBDIPreload.h
tools/QBDIPreload/src/: CMakeLists.txt  darwin_exceptd.c  darwin_exceptd.h  darwin_exception.defs  darwin_preload.c  linux_preload.c  trampoline.asm  trampoline_x64.asm  trampoline_x86.asm  win_preload.c
tools/QBDIWinPreloader/: CMakeLists.txt
tools/QBDIWinPreloader/src/: QBDIWinPreloader.c
tools/pyqbdi/: CMakeLists.txt  find_pyqbdi_install_path.py  fix_preload_lib_osx.py  preload.cpp  pyqbdi.cpp  pyqbdi.hpp  pyqbdi_docs.cpp  pyqbdi_module.cpp  pyqbdipreload.py  tool.py
tools/pyqbdi/binding/: CMakeLists.txt  Callback.cpp  Enum.hpp  Errors.cpp  InstAnalysis.cpp  Logs.cpp  Memory.cpp  Options.cpp  Range.cpp  State_ARM.cpp  State_X86.cpp  State_X86_64.cpp  VM.cpp  callback_python.h
tools/pyqbdi/utils/: CMakeLists.txt  Float.cpp  Memory.cpp
tools/validation_runner/: RunConfig.py  RunOrchestrator.py  RunResult.py  SQLite.py  TestResult.py  ValidationRunner.py  buildbot.cfg  coverage.cfg  example.cfg  travis.cfg
tools/validation_runner/testfiles/: hamlet.txt
tools/validator/: CMakeLists.txt  darwin_process.cpp  darwin_process.h  darwin_validator.cpp  instrumented.cpp  instrumented.h  linux_process.cpp  linux_process.h  linux_validator.cpp  master.cpp  master.h  pipes.cpp  pipes.h  process.h  validator.h  validatorengine.cpp  validatorengine.h
tools/validator/AARCH64/: CMakeLists.txt  linux_AARCH64.cpp  linux_AARCH64.h  validatorengine_AARCH64.cpp
tools/validator/ARM/: CMakeLists.txt  linux_ARM.cpp  linux_ARM.h  validatorengine_ARM.cpp
(+524 files in other folders)
